--- a/Create_post/Job vacancy post.html
+++ b/Create_post/Job vacancy post.html
@@ -1052,7 +1052,7 @@
                                             <div class="choose">
                                                 <div class="form-group ">
                                                     <label for="Course-duration" class="form-label">Course duration</label>
-                                                    <select name="min_experience" class="form-select" id="id_min_experience">
+                                                    <select name="min_experience" class="form-select-to" id="id_min_experience">
                                                         <option value="" selected="">Min Experience</option>
 
                                                         <option value="0">Fresher</option>
@@ -1089,7 +1089,7 @@
 
                                                 <div class="form-group second-choose-parent">
                                                     <label for="Course-duration" class="form-label"></label>
-                                                    <select name="min_experience" class="form-select" id="id_min_experience">
+                                                    <select name="min_experience" class="form-select-to" id="id_min_experience">
                                                         <option value="" selected="">Min Experience</option>
 
                                                         <option value="0">Fresher</option>
@@ -1120,6 +1120,7 @@
 
                                                     </select>
                                                 </div>
+
                                             </div>
                                             <div class="form-group">
                                                 <label for="lastName" class="form-label">Job type<span class="red-star">*</span></label>
@@ -1134,6 +1135,12 @@
 
                                                     <option value="Internship">Internship</option>
                                                 </select>
+                                            </div>
+
+                                             <div class="form-group">
+                                                <label for="lastName" class="form-label">Opening Count <span class="red-star">*</span></label>
+                                                <input type="text" id="email" name="location" class="form-input"
+                                                    placeholder="Enter your email" required>
                                             </div>
                                     </div>
 
